--- a/main.ipynb
+++ b/main.ipynb
@@ -4,21 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Config.Dataset.cifar10 import load_dataset\n",
     "from Config.Model.custom import ComposedModel,NUM_CLASSES\n",
     "from torch.utils.data import DataLoader\n",
     "from Pruning.greg import GReg\n",
     "from Pruning.taylor import Taylor\n",
+    "from Mutants.core import LabelError, DataMissing, DataShuffle, NoisePerturb, ContrastRatio\n",
+    "from Pruning.obd import OBD\n",
     "from Indicator.builtin import compute_classification_metrics\n",
     "import datetime\n",
     "from utils import check_device\n",
@@ -56,129 +50,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataloader = DataLoader(train_dataset, batch_size=128, shuffle=True)\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=128, shuffle=False,collate_fn=ContrastRatio())\n",
     "test_dataloader = DataLoader(test_dataset, batch_size=128, shuffle=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# true_labels = list()\n",
-    "# predicted_labels = list()\n",
-    "# device = check_device()\n",
-    "# for data, target in tqdm(test_dataloader):\n",
-    "#     data, target = data.to(device), target.to(device)\n",
-    "#     true_labels.append(target.cpu().detach().numpy())\n",
-    "#     predicted_labels.append(model(data).cpu().detach().numpy())\n",
-    "# true_labels = np.concatenate(true_labels)\n",
-    "# predicted_labels = np.concatenate(predicted_labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sklearn.metrics import roc_auc_score\n",
-    "\n",
-    "# roc_auc_score(true_labels, predicted_labels, multi_class='ovo')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sklearn.metrics import classification_report\n",
-    "\n",
-    "# print(classification_report(true_labels, predicted_labels.argmax(-1)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# compute_classification_metrics(model, test_dataloader, experiment_name,NUM_CLASSES)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c386cd1d1df94ca285ef616b173eaf0b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/391 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m taylor \u001b[39m=\u001b[39m Taylor()\n\u001b[1;32m----> 2\u001b[0m pruned_model \u001b[39m=\u001b[39m taylor(model, train_dataloader, save_path\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mremoved.pkl\u001b[39;49m\u001b[39m\"\u001b[39;49m, pruning_ratio\u001b[39m=\u001b[39;49m\u001b[39m0.65\u001b[39;49m)\n",
-      "File \u001b[1;32mc:\\Users\\Zhang\\Documents\\GitHub\\Neural-testing\\Pruning\\taylor.py:101\u001b[0m, in \u001b[0;36mTaylor.__call__\u001b[1;34m(self, net, train_dataloader, save_path, pruning_ratio)\u001b[0m\n\u001b[0;32m     99\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtrain_dataloader \u001b[39m=\u001b[39m train_dataloader\n\u001b[0;32m    100\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mthre \u001b[39m=\u001b[39m pruning_ratio\n\u001b[1;32m--> 101\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_get_total()\n\u001b[0;32m    102\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_calculate_param_remove()\n\u001b[0;32m    103\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_prune_model()\n",
-      "File \u001b[1;32mc:\\Users\\Zhang\\Documents\\GitHub\\Neural-testing\\Pruning\\taylor.py:60\u001b[0m, in \u001b[0;36mTaylor._get_total\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     58\u001b[0m     loss \u001b[39m=\u001b[39m loss_func(outputs, y)\n\u001b[0;32m     59\u001b[0m     total_loss \u001b[39m=\u001b[39m loss\u001b[39m.\u001b[39mitem() \u001b[39m+\u001b[39m total_loss\n\u001b[1;32m---> 60\u001b[0m     loss\u001b[39m.\u001b[39;49mbackward()\n\u001b[0;32m     61\u001b[0m     num \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m x\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]\n\u001b[0;32m     62\u001b[0m totals \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m()\n",
-      "File \u001b[1;32mc:\\Users\\Zhang\\miniconda3\\lib\\site-packages\\torch\\_tensor.py:488\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    478\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[0;32m    479\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    480\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[0;32m    481\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    486\u001b[0m         inputs\u001b[39m=\u001b[39minputs,\n\u001b[0;32m    487\u001b[0m     )\n\u001b[1;32m--> 488\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\n\u001b[0;32m    489\u001b[0m     \u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs\n\u001b[0;32m    490\u001b[0m )\n",
-      "File \u001b[1;32mc:\\Users\\Zhang\\miniconda3\\lib\\site-packages\\torch\\autograd\\__init__.py:197\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    192\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[0;32m    194\u001b[0m \u001b[39m# The reason we repeat same the comment below is that\u001b[39;00m\n\u001b[0;32m    195\u001b[0m \u001b[39m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[0;32m    196\u001b[0m \u001b[39m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[1;32m--> 197\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(  \u001b[39m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[0;32m    198\u001b[0m     tensors, grad_tensors_, retain_graph, create_graph, inputs,\n\u001b[0;32m    199\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([128, 3, 32, 32])\n",
+      "tensor([[[0.2702, 0.1970, 0.2290,  ..., 0.7237, 0.6962, 0.6779],\n",
+      "         [0.0733, 0.0000, 0.0824,  ..., 0.5634, 0.5451, 0.5588],\n",
+      "         [0.1145, 0.0733, 0.2244,  ..., 0.5405, 0.5497, 0.4993],\n",
+      "         ...,\n",
+      "         [0.9527, 0.9207, 0.9069,  ..., 0.7329, 0.2565, 0.2428],\n",
+      "         [0.8245, 0.7924, 0.8520,  ..., 0.8428, 0.4443, 0.3802],\n",
+      "         [0.8107, 0.7695, 0.8199,  ..., 0.9894, 0.6917, 0.5634]],\n",
+      "\n",
+      "        [[0.2840, 0.2107, 0.2199,  ..., 0.6046, 0.5726, 0.5680],\n",
+      "         [0.0916, 0.0000, 0.0366,  ..., 0.4031, 0.3802, 0.3985],\n",
+      "         [0.1099, 0.0321, 0.1237,  ..., 0.3848, 0.3848, 0.3344],\n",
+      "         ...,\n",
+      "         [0.7787, 0.7008, 0.7375,  ..., 0.6092, 0.1420, 0.1557],\n",
+      "         [0.6367, 0.5634, 0.6596,  ..., 0.6779, 0.2840, 0.2428],\n",
+      "         [0.6596, 0.5909, 0.6504,  ..., 0.8428, 0.5405, 0.4214]],\n",
+      "\n",
+      "        [[0.2886, 0.2061, 0.1970,  ..., 0.4947, 0.4672, 0.4718],\n",
+      "         [0.0916, 0.0000, 0.0000,  ..., 0.2519, 0.2290, 0.2611],\n",
+      "         [0.0962, 0.0000, 0.0366,  ..., 0.2290, 0.2290, 0.1924],\n",
+      "         ...,\n",
+      "         [0.4397, 0.1557, 0.1191,  ..., 0.3206, 0.0321, 0.0916],\n",
+      "         [0.4397, 0.1924, 0.1374,  ..., 0.4306, 0.1557, 0.1557],\n",
+      "         [0.5313, 0.4306, 0.3985,  ..., 0.6413, 0.3848, 0.3298]]])\n",
+      "tensor([6, 9, 9, 4, 1, 1, 2, 7, 8, 3, 4, 7, 7, 2, 9, 9, 9, 3, 2, 6, 4, 3, 6, 6,\n",
+      "        2, 6, 3, 5, 4, 0, 0, 9, 1, 3, 4, 0, 3, 7, 3, 3, 5, 2, 2, 7, 1, 1, 1, 2,\n",
+      "        2, 0, 9, 5, 7, 9, 2, 2, 5, 2, 4, 3, 1, 1, 8, 2, 1, 1, 4, 9, 7, 8, 5, 9,\n",
+      "        6, 7, 3, 1, 9, 0, 3, 1, 3, 5, 4, 5, 7, 7, 4, 7, 9, 4, 2, 3, 8, 0, 1, 6,\n",
+      "        1, 1, 4, 1, 8, 3, 9, 6, 6, 1, 8, 5, 2, 9, 9, 8, 1, 7, 7, 0, 0, 6, 9, 1,\n",
+      "        2, 2, 9, 2, 6, 6, 1, 9])\n"
      ]
     }
    ],
    "source": [
-    "taylor = Taylor()\n",
-    "pruned_model = taylor(model, train_dataloader, save_path=\"removed.pkl\", pruning_ratio=0.65)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import check_device"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "device(type='cuda')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "check_device()"
+    "for x,y in train_dataloader:\n",
+    "    print(x.shape)\n",
+    "    print(x[0])\n",
+    "    print(y)\n",
+    "    break"
    ]
   },
   {
