--- a/main.ipynb
+++ b/main.ipynb
@@ -110,6 +110,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'advGan': {'image_nc': 3, 'box_min': 0, 'box_max': 1, 'eps': '16 / 255', 'epochs': 50}, 'fgsm': {'eps': '8 / 255'}, 'bim': {'eps': '8 / 255', 'alpha': '2 / 255', 'steps': 10}, 'pgd': {'eps': '8 / 255', 'alpha': '2 / 255', 'steps': 10, 'random_start': 'True'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import toml\n",
+    "\n",
+    "with open('Config/adversarial.toml') as f:\n",
+    "    config = toml.load(f)\n",
+    "    print(config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06274509803921569"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval(\"16/255\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
