--- a/main.ipynb
+++ b/main.ipynb
@@ -110,21 +110,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'advGan': {'image_nc': 3, 'box_min': 0, 'box_max': 1, 'eps': '16 / 255', 'epochs': 50}, 'fgsm': {'eps': '8 / 255'}, 'bim': {'eps': '8 / 255', 'alpha': '2 / 255', 'steps': 10}, 'pgd': {'eps': '8 / 255', 'alpha': '2 / 255', 'steps': 10, 'random_start': 'True'}}\n"
+     "ename": "TomlDecodeError",
+     "evalue": "Invalid date or number (line 2 column 1 char 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\Zhang\\miniconda3\\lib\\site-packages\\toml\\decoder.py:511\u001b[0m, in \u001b[0;36mloads\u001b[1;34m(s, _dict, decoder)\u001b[0m\n\u001b[0;32m    510\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 511\u001b[0m     ret \u001b[39m=\u001b[39m decoder\u001b[39m.\u001b[39;49mload_line(line, currentlevel, multikey,\n\u001b[0;32m    512\u001b[0m                             multibackslash)\n\u001b[0;32m    513\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mValueError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mc:\\Users\\Zhang\\miniconda3\\lib\\site-packages\\toml\\decoder.py:737\u001b[0m, in \u001b[0;36mTomlDecoder.load_line\u001b[1;34m(self, line, currentlevel, multikey, multibackslash)\u001b[0m\n\u001b[0;32m    736\u001b[0m \u001b[39mif\u001b[39;00m prev_val \u001b[39m==\u001b[39m pair[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]:\n\u001b[1;32m--> 737\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mInvalid date or number\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    738\u001b[0m \u001b[39mif\u001b[39;00m strictly_valid:\n",
+      "\u001b[1;31mValueError\u001b[0m: Invalid date or number",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mTomlDecodeError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtoml\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mConfig/pipeline.toml\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m----> 4\u001b[0m     config \u001b[39m=\u001b[39m toml\u001b[39m.\u001b[39;49mload(f)\n\u001b[0;32m      5\u001b[0m     \u001b[39mprint\u001b[39m(config)\n",
+      "File \u001b[1;32mc:\\Users\\Zhang\\miniconda3\\lib\\site-packages\\toml\\decoder.py:156\u001b[0m, in \u001b[0;36mload\u001b[1;34m(f, _dict, decoder)\u001b[0m\n\u001b[0;32m    154\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    155\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 156\u001b[0m         \u001b[39mreturn\u001b[39;00m loads(f\u001b[39m.\u001b[39;49mread(), _dict, decoder)\n\u001b[0;32m    157\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m:\n\u001b[0;32m    158\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mYou can only load a file descriptor, filename or \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    159\u001b[0m                         \u001b[39m\"\u001b[39m\u001b[39mlist\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\Zhang\\miniconda3\\lib\\site-packages\\toml\\decoder.py:514\u001b[0m, in \u001b[0;36mloads\u001b[1;34m(s, _dict, decoder)\u001b[0m\n\u001b[0;32m    511\u001b[0m     ret \u001b[39m=\u001b[39m decoder\u001b[39m.\u001b[39mload_line(line, currentlevel, multikey,\n\u001b[0;32m    512\u001b[0m                             multibackslash)\n\u001b[0;32m    513\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mValueError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m--> 514\u001b[0m     \u001b[39mraise\u001b[39;00m TomlDecodeError(\u001b[39mstr\u001b[39m(err), original, pos)\n\u001b[0;32m    515\u001b[0m \u001b[39mif\u001b[39;00m ret \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    516\u001b[0m     multikey, multilinestr, multibackslash \u001b[39m=\u001b[39m ret\n",
+      "\u001b[1;31mTomlDecodeError\u001b[0m: Invalid date or number (line 2 column 1 char 9)"
      ]
     }
    ],
    "source": [
     "import toml\n",
     "\n",
-    "with open('Config/adversarial.toml') as f:\n",
+    "with open('Config/pipeline.toml') as f:\n",
     "    config = toml.load(f)\n",
     "    print(config)"
    ]
@@ -151,10 +162,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Adversarial import advGan\n",
+    "from Explanation import ig\n",
+    "from Mutants import DataShuffle"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pretrainedmodels"
+   ]
   }
  ],
  "metadata": {
