--- a/test.ipynb
+++ b/test.ipynb
@@ -59,18 +59,11 @@
     {
      "data": {
       "text/plain": [
-       "{'Config': {'model': 'example', 'dataset': 'example'},\n",
-       " 'Mutants': {'datamissing': {'input': 'test_dataloader',\n",
-       "   'output': 'missed_test_dataloader'}},\n",
-       " 'Adversarial': {'fgsm': {'input': 'missed_test_dataloader',\n",
-       "   'save': True,\n",
-       "   'transfer_models': {}},\n",
-       "  'bim': {'input': 'test_dataloader', 'save': True}},\n",
+       "{'Config': {'model': 'custom', 'dataset': 'cifar10'},\n",
        " 'Explanation': {'fast_ig': {'input': 'test_dataloader',\n",
        "   'save': True,\n",
        "   'evaluate': True},\n",
-       "  'agi': {'input': 'test_dataloader', 'save': True, 'evaluate': True}},\n",
-       " 'Pruning': {'asl': {'input': 'train_dataloader'}}}"
+       "  'saliencymap': {'input': 'test_dataloader', 'save': True, 'evaluate': True}}}"
       ]
      },
      "execution_count": 3,
@@ -110,14 +103,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ComposedModel()"
+    "model = ComposedModel().get_model()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
    "source": [
     "train_dataset,test_dataset = dataset.load_dataset()"
    ]
@@ -130,7 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "32"
+       "128"
       ]
      },
      "execution_count": 8,
@@ -170,17 +172,10 @@
     {
      "data": {
       "text/plain": [
-       "{'Mutants': {'datamissing': {'input': 'test_dataloader',\n",
-       "   'output': 'missed_test_dataloader'}},\n",
-       " 'Adversarial': {'fgsm': {'input': 'missed_test_dataloader',\n",
-       "   'save': True,\n",
-       "   'transfer_models': {}},\n",
-       "  'bim': {'input': 'test_dataloader', 'save': True}},\n",
-       " 'Explanation': {'fast_ig': {'input': 'test_dataloader',\n",
+       "{'Explanation': {'fast_ig': {'input': 'test_dataloader',\n",
        "   'save': True,\n",
        "   'evaluate': True},\n",
-       "  'agi': {'input': 'test_dataloader', 'save': True, 'evaluate': True}},\n",
-       " 'Pruning': {'asl': {'input': 'train_dataloader'}}}"
+       "  'saliencymap': {'input': 'test_dataloader', 'save': True, 'evaluate': True}}}"
       ]
      },
      "execution_count": 11,
@@ -314,49 +309,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = np.load(glob.glob(f\"Outputs/20230613-201820/Explanation/agi/*.npz\")[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "attribution = results['attribution']\n",
-    "x = torch.from_numpy(results['x']).to(device)\n",
-    "deletion = CausalMetric(\n",
-    "    model, 'del', substrate_fn=torch.zeros_like, hw=np.prod(INPUT_SIZE[-2:]), num_classes=NUM_CLASSES)\n",
-    "insertion = CausalMetric(\n",
-    "    model, 'ins', substrate_fn=torch.zeros_like, hw=np.prod(INPUT_SIZE[-2:]), num_classes=NUM_CLASSES)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.4785016847890802"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "deletion.evaluate(x, attribution, len(x)).mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def pruning_runner(module,f,function,cfg):\n",
     "    input_ = globals()[cfg[\"input\"]]\n",
     "    function_config = pruning_config.get(f,{})\n",
@@ -396,30 +348,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running datamissing from Mutants\n",
-      "Running fgsm from Adversarial\n",
-      "fgsm Success Rate: 100.0%\n",
-      "Running bim from Adversarial\n",
-      "bim Success Rate: 96.875%\n",
       "Running fast_ig from Explanation\n",
-      "Insertion: 0.0007565659075225994\n",
-      "Deletion: 0.4785016847890802\n",
-      "Running agi from Explanation\n",
-      "Insertion: 0.0007565659075225994\n",
-      "Deletion: 0.4785016847890802\n",
-      "Running asl from Pruning\n"
+      "Insertion: 0.09720203146389395\n",
+      "Deletion: 0.9859139351174235\n",
+      "Running saliencymap from Explanation\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "ASL.__call__() missing 1 required positional argument: 'save_path'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mRunning \u001b[39m\u001b[39m{\u001b[39;00mf\u001b[39m}\u001b[39;00m\u001b[39m from \u001b[39m\u001b[39m{\u001b[39;00mmodule\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      6\u001b[0m runner \u001b[39m=\u001b[39m distribution(module)\n\u001b[1;32m----> 7\u001b[0m runner(module,f,function,cfg)\n",
-      "Cell \u001b[1;32mIn[15], line 7\u001b[0m, in \u001b[0;36mpruning_runner\u001b[1;34m(module, f, function, cfg)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m f \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mgreg\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m      6\u001b[0m     function \u001b[39m=\u001b[39m function(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mfunction_config)\n\u001b[1;32m----> 7\u001b[0m     \u001b[39mglobals\u001b[39m()[\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mf\u001b[39m}\u001b[39;00m\u001b[39m_pruned_model_pr_\u001b[39m\u001b[39m{\u001b[39;00mfunction_config[\u001b[39m'\u001b[39m\u001b[39mpruning_ratio\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m function(model,train_dataloader)\n\u001b[0;32m      8\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m      9\u001b[0m     function \u001b[39m=\u001b[39m function(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mfunction_config)\n",
-      "\u001b[1;31mTypeError\u001b[0m: ASL.__call__() missing 1 required positional argument: 'save_path'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Zhang\\miniconda3\\lib\\site-packages\\captum\\_utils\\gradient.py:57: UserWarning: Input Tensor 0 did not already require gradients, required_grads has been set automatically.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Insertion: 0.09720203146389395\n",
+      "Deletion: 0.9859139351174235\n"
      ]
     }
    ],
@@ -432,6 +380,90 @@
     "        runner = distribution(module)\n",
     "        runner(module,f,function,cfg)\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Zhang\\miniconda3\\lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Zhang\\miniconda3\\lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=Inception_V3_Weights.IMAGENET1K_V1`. You can also use `weights=Inception_V3_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn as nn\n",
+    "from torchvision import transforms\n",
+    "from torchvision.models import resnet50, inception_v3, googlenet, vgg16, mobilenet_v2\n",
+    "from tqdm import tqdm\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "from utils import check_device\n",
+    "device = check_device()\n",
+    "from Explanation.evaluation.tools import CausalMetric\n",
+    "import argparse\n",
+    "import torch\n",
+    "import random\n",
+    "model = inception_v3(pretrained=True).eval().to(device)\n",
+    "sm = nn.Softmax(dim=-1)\n",
+    "mean = [0.485, 0.456, 0.406]\n",
+    "std = [0.229, 0.224, 0.225]\n",
+    "norm_layer = transforms.Normalize(mean, std)\n",
+    "sm = nn.Softmax(dim=-1)\n",
+    "model = nn.Sequential(norm_layer, model, sm).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deletion = CausalMetric(model, 'del',substrate_fn=torch.zeros_like,hw=224*224,num_classes=1000)\n",
+    "insertion = CausalMetric(model, 'ins',substrate_fn=torch.zeros_like,hw=224*224,num_classes=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_batch = torch.load(\"img_batch.pt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attribution = np.load(f\"inception_v3_our_attributions.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 43%|████▎     | 96/225 [05:36<11:23,  5.30s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "scores = {'del': deletion.evaluate(\n",
+    "        img_batch, attribution, 100), 'ins': insertion.evaluate(img_batch, attribution, 100)}"
    ]
   },
   {
